# SegMinNavigation

./: .gitignore  README.md
row_crop_follow/: README.md  package.xml  setup.cfg  setup.py
row_crop_follow/config/: otsu_thresholding_params.yaml  seg_controller_params.yaml
row_crop_follow/launch/: otsu_controller.launch.py  seg_controller.launch.py
row_crop_follow/models/lr_aspp/trees_covivio/: trees_segmentation_binary.tflite
row_crop_follow/models/lr_aspp/vineyard_tot_pergolato/: vineyards_segmentation_binary.tflite
row_crop_follow/row_crop_follow/: otsu_thresholding.py  otsu_thresholding_node.py  seg_controller.py  seg_controller_node.py  tf_gpu_interpreter.py  tf_lite_interpreter.py
row_crop_follow/row_crop_follow/utils/: mobilenet_v3.py  models.py
