<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>row_crop_follow</name>
  <version>1.0.0</version>
  <description>Navigation algorithm to maintain a central path inside the inter-row</description>
  <maintainer email="marco.ambrosio@polito.it">Marco Ambrosio</maintainer>
  <maintainer email="alessandro.navone@polito.it">Alessandro Navone</maintainer>
  <maintainer email="mauro.martini@polito.it">Mauro Martini</maintainer>
  <license>GNU GPLv3</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>perception</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python-tensorflow-pip</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
